Fixed tool-tip hover z-index

--- a/src/css/helpers.css
+++ b/src/css/helpers.css
@@ -733,6 +733,7 @@ ul.errors li {
 .list--tool-tip > li:hover .tool-tip {
   display: block;
   opacity: 100;
+  z-index: 999;
 }
 
 .list--expander.icon > li .button--icon:hover > i,
